# python-project-lvl2

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pythonci.yml
gendiff/: __init__.py  cli.py  differ.py  loader.py  plain.py  stylish.py
gendiff/formatter/: plain.py  stylish.py  tojson.py
gendiff/scripts/: gendiff.py
htmlcov/: d_1e7af47e2fa2fbbd___init___py.html  d_1e7af47e2fa2fbbd_gendiff_py.html  d_df4f92b2916e84df___init___py.html  index.html  status.json
tests/: test_gendiff.py
tests/fixtures/: after_nested.yml  json_diff_nested.txt  nested1.yml  result_nested.txt  stylish_diff_nested.txt
